Add more example configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
 API_KEY="..."
+#API_URL="https://api.openai.com/v1/chat/"
+#API_MODEL="gpt-4o-mini"
+#TEMPERATURE="0.3"
+
 FEED_URLS="https://lorem-rss.herokuapp.com/feed?unit=minute,https://lorem-rss.herokuapp.com/feed?unit=second"
 USE_FEED_SUMMARY="true"
-SUMMARY_TIME="08:30"
-HTTP_PORT="8000"
+#CHECK_INTERVAL_MINUTES="30"
+#SUMMARY_TIME="08:00"
+
+#OUTPUT_FEED_FILE="output/summary_feed.xml"
+#OUTPUT_FEED_TITLE="Daily Summarized Feed"
+#OUTPUT_FEED_DESC="Summaries of articles from monitored feeds."
+#SERVER_PORT="8000"
+
+#PROCESSED_IDS_FILE="data/processed_ids.json"
+#SYSTEM_PROMPT="You are an expert summarizer. Given the following article text, provide a concise summary (around 2-4 sentences) focusing on the key information. Respond ONLY with the summary text, no preamble or extra phrases like \"Here is the summary:\". Be objective and accurate."
